# LRFR-Project

./: .gitattributes  .gitignore  .todo  QUICKSTART.md  QUICK_START.md  README.md  TODO.md  benchmark_report.csv  checkpoint_keys.txt  colab_training.ipynb  debug_output.txt  evaluation_output.txt  find_max_acc.py  inspect_checkpoint.py  pyproject.toml  repro_batchnorm.py  requirements.txt  results_precycle.json  val_results.csv  val_results_pretrained.csv
Draft Paper/: draft-paper.tex
Proposal/: CS 565 Project Proposal.pptx
Submission Paper/: paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
evaluation_results/: results.json
implementation_app/: README.md  app.py  config.py  install.sh  pipeline.py  requirements.txt  run_app.py  webcam_capture.py
presentation/: lrfr_presentation.pptx
raspberry_pi_app/: IMPLEMENTATION_SUMMARY.md  MEMORY_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  QUANTIZATION_VERIFICATION.md  RASPBERRY_PI_SETUP_GUIDE.md  README.md  app.py  config.py  face_detector.py  gallery_manager.py  install.sh  pipeline.py  requirements.txt  run_app.py  test_model_loading.py  test_setup.py  test_windows.py  webcam_capture.py
technical/: 112x112_MIGRATION_COMPLETE.md  32x32_OPTIMIZATION_NOTES.md  CYCLIC_TRAINING_QUICKSTART.md  CYCLIC_VS_RETRAINING_ANALYSIS.md  DSR_CYCLE_TRAINING_GUIDE.md  EDGEFACE_XXS_INTEGRATION.md  EVALUATION.md  EVALUATION_GUIDE.md  EVALUATION_METRICS_REVIEW.md  FINETUNE_GUIDE.md  HR_RESOLUTION_FIX.md  IMPLEMENTATION_SUMMARY.md  MULTI_RESOLUTION_GUIDE.md  NEXT_STEPS.md  RASPBERRY_PI_DEPLOYMENT.md  (+11 more)
(+102 files in other folders)
