[project]
name = "lrfr_project"
version = "0.1.0"
description = "Low Resolution Facial Recognition Research Project for CS 565 - Artificial Intelligence"
authors = [
    {name = "Daniel Szurek, Brandon Nguyen"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mtcnn (>=1.0.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
